Fix #107, lack of spacing after show with poster

--- a/_sass/_search.sass
+++ b/_sass/_search.sass
@@ -37,10 +37,10 @@ body.search
   @include block
   margin-bottom: $baseline * 2
   clear: both
+  overflow: auto // Make nice spacing when image bottom is bottommost #107
   .search-result-poster-thumb
     float: left
     padding-right: 14px
-    margin-bottom: $baseline
   .search-result-show-title
     margin-bottom: $baseline / 5
   .meta
